--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,71 +1,70 @@
-* {
-    box-sizing: border-box;
-  }
-  
-.invoices {
-    width: 20%;
-    display: inline-block;
-    vertical-align: top;
-    overflow: auto;
+/* Jank iFrame for the navbar */
+
+#navbar-iframe {
+    position: absolute;
+    border-style: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
-.inv-search {
-    display: inline-block;
-    width: 100%;
+/* Spacer for the capsule logo, because it has to change to a different zIndex when it's clicked */
+
+#capsule-logo-spacer {
+    position: absolute;
+    left: -7px;
+    top: -2px;
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+    margin-left: 7px;
+    z-index: 3;
+    padding-top: 5px;
     padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 4px;
+    cursor: pointer;
 }
 
-.scan-items {
-    display: inline-block;
-    width: 79%;
-    margin: 0;
-    overflow: auto;
-    border-collapse: collapse;
+
+
+#capsule-logo-spacer:hover {
+    background-color: #AAAAAAaa;
 }
 
-.inv-vendor-image {
-    width: 75px;
-    height: 75px;
-    margin: 0;
-}
+/* Jank iFrame for the sidebar */
 
-.scan-in {
+#sidebar-iframe {
+    border-style: none;
+    position: absolute;
+    top: 0;
+    left: -350px;
+    right: 0;
     width: 100%;
-    padding: 5px 10px;
+    height: 100%;
+    z-index: 0;
 }
 
-.invoice {
-    display: inline-block;
+#sidebar-background-filter {
+    position: absolute;
     width: 100%;
+    height: 100%;
+    left: -100%;
+    top: 0;
+    background-color: #33333388;
+    z-index: 0;
+    filter: blur(.8);
 }
 
-.scan-table tr:nth-child(even) {
-    background-color: hsla(203, 100%, 89%, 0.5);
-}
-
-.scan-table tr:hover {
-    background-color: hsla(203, 100%, 89%, 1);
-}
-
-.scan-table td, .scan-table th {
-    padding: 7px 5px;
-}
-
-button {
-    margin-top: 5px;
-}
-
-.scan-table th {
-    background-color: rgb(0, 153, 255);
-    color: white;
-    stroke: black 1px;
-    border: 1px solid rgb(255, 255, 255);
-}
-
-.scan-table {
-    border-collapse: collapse;
-}
-
-.scan-table td {
-    border-bottom: 1px solid rgb(150, 192, 255);
+#scan-iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: none;
 }
