--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,32 +1,97 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
 #nav-div {
+    display: inline-block;
     position: fixed;
     top: 0;
     left: 0;
     background-color: #ddd;
     width: 100%;
+    z-index: 1;
 }
 
 .nav {
     display: inline-block;
     position: relative;
     padding: 7px;
+    vertical-align: middle;
 }
 
 .nav:hover {
     background-color: #aaa;
 }
 
-#capsule-logo {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
+
+/* Capsule Logo */
+
+#capsule-logo-div {
+    padding-top: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 3px;
+    width: 27px;
+    height: 27px;
     vertical-align: middle;
-    margin-left: 7px;
 }
+
+#capsule-top {
+    position: absolute;
+    background-color: #EF4931;
+    width: 9px;
+    height: 18px;
+    margin: 0 9px;
+    border-radius: 10px;
+}
+
+#capsule-right {
+    position: absolute;
+    background-color: #99BFBC;
+    width: 18px;
+    height: 9px;
+    margin: 9px 9px;
+    border-radius: 10px;
+}
+
+#capsule-left {
+    position: absolute;
+    background-color: #FFD300;
+    width: 18px;
+    height: 9px;
+    margin: 9px 0;
+    border-radius: 10px;
+}
+
+#capsule-bottom {
+    position: absolute;
+    background-color: #0F3C6C;
+    width: 9px;
+    height: 18px;
+    margin: 9px 9px;
+    border-radius: 10px;
+}
+
+#capsule-top-triangle {
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin: 9px 9px;
+    border-top: 9px solid #EF4931;
+    border-right: 9px solid transparent;
+}
+
+#capsule-bottom-triangle {
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin: 9px 9px;
+    border-bottom: 9px solid #0F3C6C;
+    border-left: 9px solid transparent;
+}
+
+/* End Capsule Logo */
 
 .nav a {
     text-decoration: none;
@@ -39,7 +104,6 @@
     background-color: #ddd;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-    padding: 12px 16px;
     z-index: 1;
     margin: 7px -7px;
 }
@@ -48,6 +112,10 @@
     color: black;
     padding: 7px;
     display: block;
+}
+
+.nav-dropdown a:hover {
+    background: #aaa;
 }
 
 .nav:hover .nav-dropdown {
