--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -2,16 +2,19 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
 /* Sidebar */
 
 #sidebar {
+    display: none;
     position: fixed;
     width: 350px;
     height: 100%;
     top: 0;
-    left: 0;
+    left: -1000;
     bottom: 0;
     background-color: #fff;
+    z-index: 2;
 }
 
 /* Invoice Search Area */
@@ -82,4 +85,63 @@
 
 .vendor-info li {
     padding: 0 10px;
+}
+
+
+/* Sidebar background filter */
+
+
+#sidebar-background-filter {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: -100%;
+    background-color: #000000aa;
+    backdrop-filter: blur(1px);
+    z-index: 1;
+}
+
+
+
+/* Close Sidebar Button */
+
+
+
+#close-sidebar {
+    position: absolute;
+    top: 25px;
+    left: 375px;
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    border: 1px solid black;
+}
+
+#close-sidebar:hover {
+    background-color: #aaa;
+}
+
+#sidebar-x-1 {
+    position: absolute;
+    background-color: black;
+    height: 30px;
+    width: 3px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+#sidebar-x-2 {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    background-color: black;
+    height: 30px;
+    width: 3px;
 }
