--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,70 +1,4 @@
-/* Jank iFrame for the navbar */
-
-#navbar-iframe {
-    position: absolute;
-    border-style: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
+* {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Spacer for the capsule logo, because it has to change to a different zIndex when it's clicked */
-
-#capsule-logo-spacer {
-    position: absolute;
-    left: -7px;
-    top: -2px;
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-    margin-left: 7px;
-    z-index: 3;
-    padding-top: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 4px;
-    cursor: pointer;
-}
-
-
-
-#capsule-logo-spacer:hover {
-    background-color: #AAAAAAaa;
-}
-
-/* Jank iFrame for the sidebar */
-
-#sidebar-iframe {
-    border-style: none;
-    position: absolute;
-    top: 0;
-    left: -350px;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-}
-
-#sidebar-background-filter {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: -100%;
-    top: 0;
-    background-color: #33333388;
-    z-index: 0;
-    filter: blur(.8);
-}
-
-#scan-iframe {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    border: none;
-}
