--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -2,19 +2,30 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+body {
+  transition: background-color .5s;
+}
+
 
 /* Sidebar */
 
 #sidebar {
-    display: none;
+    display: block;
     position: fixed;
     width: 350px;
     height: 100%;
     top: 0;
-    left: -1000;
+    left: -450px;
     bottom: 0;
     background-color: #fff;
     z-index: 2;
+    transition: 0.5s;
+    overflow: auto;
+}
+
+#sidebar-title {
+    font-size: 36px;
+    padding: 20px 20px 0;
 }
 
 /* Invoice Search Area */
@@ -30,6 +41,12 @@
     width: 80%;
     margin: 0 auto;
     top: 0;
+}
+
+.invoice-search-sliders,
+.invoice-search-sliders input,
+.invoice-search-sliders label {
+    cursor: pointer;
 }
 
 /* Invoice upload button */
@@ -57,34 +74,43 @@
 .invoice-upload:hover {
     background-color: #00ff0033;
     cursor: pointer;
+    transition: 2s;
 }
 
 /* Invoice List */
 
 .invoice {
     list-style: none;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    cursor: pointer;
+    padding: 15px 0 15px 30px;
 }
 
 .invoice:hover {
-    background-color: #888;
-    cursor: pointer;
+    background-color: #aaa;
+    transition: 2s;
+}
+
+.vendor-image-list-item {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .vendor-image {
     width: 50px;
     height: 50px;
-    vertical-align: middle;
 }
 
-.vendor-info {
+.invoice-info-list-item {
     display: inline-block;
     vertical-align: middle;
+    padding-left: 10px;
 }
 
-.vendor-info li {
-    padding: 0 10px;
+.invoice-info {
+    list-style: none;
+    padding: 0;
 }
 
 
@@ -93,11 +119,11 @@
 
 #sidebar-background-filter {
     position: absolute;
+    display: none;
     width: 100%;
     height: 100%;
     top: 0;
-    left: -100%;
-    background-color: #000000aa;
+    left: 0;
     backdrop-filter: blur(1px);
     z-index: 1;
 }
@@ -110,17 +136,17 @@
 
 #close-sidebar {
     position: absolute;
-    top: 25px;
-    left: 375px;
+    top: 15px;
+    left: 275px;
     width: 50px;
     height: 50px;
     background-color: #ffffff;
-    border-radius: 50%;
-    border: 1px solid black;
 }
 
 #close-sidebar:hover {
     background-color: #aaa;
+    transition: 2s;
+    cursor: pointer;
 }
 
 #sidebar-x-1 {
